fixed shifting of the div

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah');
 body {
-    background-color: tomato;
+    background-color:aliceblue;
 }
 
 .light {
@@ -16,6 +16,7 @@ body {
     font-size: 30px;
     border-style: ridge;
     border-color: black;
+    vertical-align: top;
 }
 
 .board {
